@@ -27,6 +27,8 @@ NEWS - list of user-visible changes between releases of GNU Libtool
   - Added -os2dllname option to work around 8 character base name
     limit on OS/2.  The option has no effect on other systems.
 
+  - Support for -export-symbols and -export-symbols-regex on OS/2.
+
 
 * Noteworthy changes in release 2.4.3 (2014-10-27) [stable]
 
